--- a/Timesheets/Properties/launchSettings.json
+++ b/Timesheets/Properties/launchSettings.json
@@ -20,7 +20,8 @@
     "Timesheets": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      //"launchUrl": "weatherforecast",
+      "launchUrl": "api/[controller]",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
